fix en las dimensiones de las graficas

--- a/1.2/informe.tex
+++ b/1.2/informe.tex
@@ -68,7 +68,7 @@ f_{\text{real}} = \frac{n_{\text{real}}}{n_{\text{total}}}
 \]
 donde \( n_{\text{real}} \) es la frecuencia observada y \( n_{\text{total}} \) es el total de observaciones.
 
-Se utilizaron las siguientes estrategias de apuestas:
+Se utilizaron las siguientes estrategias de apuestas, apostando a numeros pares:
 1.Fibonacci : 
 Se utiliza la secuencia de Fibonacci para determinar el monto de la apuesta. La secuencia comienza con 1 y 1, y cada número siguiente es la suma de los dos anteriores. Si se pierde, se avanza un número en la secuencia; si se gana, se retrocede dos números en la secuencia.
 Se emplea tambien el concepto teorico de la secuencia de Fibonacci, la cual es : 1,1,2,3,5,8,13,21,34,55,89,144....
